<resources>
    <string name="app_name">E-Commerce</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password Must consist of 4 to 20 characters</string>
    <string name="error_incorrect_email">This email is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="register_now">Register Now</string>
    <string name="forgot">Forgot Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
</resources>
