<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gradient_background"
        tools:context=".activity.RegisterActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:theme="@style/AppTheme"
                android:orientation="vertical">

            <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:textSize="45sp"
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:text="@string/app_name"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"/>

            <RelativeLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:padding="10dp">


            </RelativeLayout>



            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/register"
                        android:text="@string/register"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/forgot_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot"
                        style="@style/fonts"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="|"
                        style="@style/fonts"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                <TextView
                        android:id="@+id/login_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/fonts"
                        android:text="@string/login_now"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>